--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
 			</div>
 			<div class='navigationbar'>
 				<ul>
-					<li><a href='index.html'>home</a></li>
+					<li><a href='/'>home</a></li>
 					|
 					<li><a href='projects.html'>projects</a></li>
 					|
