--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			</div>
 			<div class='navigationbar'>
 				<ul>
-					<li><a href='index.html'>home</a></li>
+					<li><a href='/'>home</a></li>
 					|
 					<li><a href='projects.html'>projects</a></li>
 					|
