added styles.css, favicon, keyboards.html, videogames.html, consolemods.html

--- a/contact.html
+++ b/contact.html
@@ -1,57 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>contact</title>
+	<title>contact?</title>
+	<link rel='icon' type='image/x-icon' href='assets/Pikachu.png'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
-	<style>
-		body {
-			margin: 0;
-			font-family: 'DotGothic16';
-			background: rgba(219, 112, 147, 1);
-		}
-		h1 {
-			text-align: center;
-			line-height: 0.5;
-		}
-		h2 {
-			letter-spacing: 0.5px;
-			line-height: 0.5;
-		}
-		h6 {
-			text-align: center;
-			letter-spacing: 0.5px;
-		}
-		p {
-			letter-spacing: 0.5px;
-		}
-		li {
-			display: inline;
-		}
-		ul {
-			text-align: center;
-		}
-		.header {
-			top: 0;
-			left: 0;
-			width: 100%;
-			border-bottom: 2px solid;
-			text-align: left;
-			padding: 5px 20px;
-		}
-		.leftside {
-			flex: 1;
-			text-align: center;
-		}
-		.rightside {
-			flex: 1;
-		}
-		.flex-container {
-			display: flex;
-		}
-	</style>
+	<link rel='stylesheet' href='styles.css'>
 </head>
 
-<body>
+<body style='background-color: black; color: white;'>
 	<div class='content'>
 
 		<div class='header'>
@@ -79,9 +35,15 @@
 					|
 					<li><a href='contact.html'>contact</a></li>
 				</ul>
+			</div>
 			<hr>
 			<br>
+			<p style='text-align: center;'>do not contact me.</p>
+			<br>
+			<br>
+			<p style='text-align: center;'><a href='mailto:garrettkft@outlook.com' style='color: black;'>email.<br><br>disclaimer: outlook sends a lot of things to junk. apologies if i am late in replying.</a></p>
 		</div>
+	</div>
 
 </body>
 </html>
