--- a/keyboards.html
+++ b/keyboards.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>journal</title>
+	<title>keyboards</title>
 	<link rel='icon' type='image/x-icon' href='assets/Pikachu.png'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
 	<link rel='stylesheet' href='styles.css'>
@@ -9,13 +9,14 @@
 
 <body>
 	<div class='content'>
-
 		<div class='header'>
 			<div class='links'>
 				[ path: 
 				<a href="/">home</a>
 				/
-				<a href="journal.html">journal</a>
+				<a href='journal.html'>journal</a>
+				/
+				<a href="keyboards.html">keyboards</a>
 				] 
 			</div>
 		</div>
@@ -38,17 +39,8 @@
 			</div>
 			<hr>
 			<br>
-			<div class='journalnavbar'>
-				<ul>
-					<li><a href='keyboards.html'>keyboards</a></li>
-					|
-					<li><a href='videogames.html'>video games</a></li>
-					|
-					<li><a href='consolemods.html'>console mods</a></li>
-				</ul>
-			</div>
+			<p style='text-align: center;'>to be updated :p</p>
 		</div>
 	</div>
-
 </body>
 </html>
