--- a/projects.html
+++ b/projects.html
@@ -2,53 +2,9 @@
 <html>
 <head>
 	<title>projects</title>
+	<link rel='icon' type='image/x-icon' href='assets/Pikachu.png'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
-	<style>
-		body {
-			margin: 0;
-			font-family: 'DotGothic16';
-			background: rgba(219, 112, 147, 1);
-		}
-		h1 {
-			text-align: center;
-			line-height: 0.5;
-		}
-		h2 {
-			letter-spacing: 0.5px;
-			line-height: 0.5;
-		}
-		h6 {
-			text-align: center;
-			letter-spacing: 0.5px;
-		}
-		p {
-			letter-spacing: 0.5px;
-		}
-		li {
-			display: inline;
-		}
-		ul {
-			text-align: center;
-		}
-		.header {
-			top: 0;
-			left: 0;
-			width: 100%;
-			border-bottom: 2px solid;
-			text-align: left;
-			padding: 5px 20px;
-		}
-		.leftside {
-			flex: 1;
-			text-align: center;
-		}
-		.rightside {
-			flex: 1;
-		}
-		.flex-container {
-			display: flex;
-		}
-	</style>
+	<link rel='stylesheet' href='styles.css'>
 </head>
 
 <body>
@@ -79,6 +35,7 @@
 					|
 					<li><a href='contact.html'>contact</a></li>
 				</ul>
+			</div>
 			<hr>
 			<br>
 			<div class='flex-container'>
@@ -114,13 +71,14 @@
 					<br>
 					<p style='font-size: 80%;'>in designing a peripheral for the meap board,
 						<br>what better interface than big buttons?
-						<br>each button has an fsr attached to it for "truly" analogue control.</p>
+						<br>each button has an fsr attached to it for "truly" "analogue" control.</p>
 					<br>
 					<p>MEAP board<br>takeaway tupperware container<br>generic arcade buttons (different sanwa clones)<br>adafruit force sensitive resistors</p>
 				</div>
 
 			</div>
 		</div>
+	</div>
 
 </body>
 </html>
