added footer, reworked projects page, modified nav bar line height, added meta, home page formatting, removed fixed width from header

--- a/consolemods.html
+++ b/consolemods.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>console mods</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel='icon' type='image/x-icon' href='assets/Pikachu.png'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
 	<link rel='stylesheet' href='styles.css'>
@@ -42,5 +44,12 @@
 			<p style='text-align: center;'>to be updated :p</p>
 		</div>
 	</div>
+	<br>
+	<footer>
+		<br>
+		created by garrett.
+		<br>
+	</footer>
+
 </body>
 </html>
