--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>contact?</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel='icon' type='image/x-icon' href='assets/Pikachu.png'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
 	<link rel='stylesheet' href='styles.css'>
@@ -42,8 +44,14 @@
 			<br>
 			<br>
 			<p style='text-align: center;'><a href='mailto:garrettkft@outlook.com' style='color: black;'>email.<br><br>disclaimer: outlook sends a lot of things to junk. apologies if i am late in replying.</a></p>
+			<br>
 		</div>
 	</div>
+	<footer>
+		<br>
+		created by garrett.
+		<br>
+	</footer>
 
 </body>
 </html>
