--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>projects</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel='icon' type='image/x-icon' href='assets/Pikachu.png'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
 	<link rel='stylesheet' href='styles.css'>
@@ -38,18 +40,13 @@
 			</div>
 			<hr>
 			<br>
-			<div class='flex-container'>
-
+			<!-- entry 1 -->
+			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
 					<img src='assets/cerial ver2.png' width='300' height='400'>
 					<p style='line-height: 0.25;'>cerial ver. 2</p>
 					<p style='line-height: 0.25;'><small><i>do not mind the scattered energy drinks.</i></small></p>
-					<br>
-					<img src='assets/cerial ver1.png' width='300' height='400'>
-					<p style='line-height: 0.25;'>cerial ver. 1</p>
-					<p style='line-height: 0.25;'><small><i>the tupperware was cleaned before use.</i></small></p>
 				</div>
-
 				<div class='rightside'>
 					<h2>cerial ver. 2 (2023)</h2>
 					<p>fight stick instrument.</p>
@@ -59,13 +56,17 @@
 						<br>it also now functions simultaneously as a fight stick <i>and</i> as a musical instrument.</p>
 					<br>
 					<p>MEAP board<br>plastic juntion box<br>generic arcade buttons and stick (sanwa clones)</p>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
+				</div>
+			</div>
+			<!-- entry 2 -->
+			<br>
+			<div class='flex-container'>
+				<div class='leftside'>
+					<img src='assets/cerial ver1.png' width='300' height='400'>
+					<p style='line-height: 0.25;'>cerial ver. 1</p>
+					<p style='line-height: 0.25;'><small><i>the tupperware was cleaned before use.</i></small></p>
+				</div>
+				<div class='rightside'>
 					<h2>cerial ver. 1 (2023)</h2>
 					<p>tupperware peripheral.</p>
 					<br>
@@ -75,10 +76,15 @@
 					<br>
 					<p>MEAP board<br>takeaway tupperware container<br>generic arcade buttons (different sanwa clones)<br>adafruit force sensitive resistors</p>
 				</div>
-
 			</div>
 		</div>
 	</div>
+	<footer>
+		<br>
+		created by garrett.
+		<br>
+	</footer>
+
 
 </body>
 </html>
