--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang='en-US'>
 <head>
 	<title>hytheaway</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel='icon' type='image/x-icon' href='assets/Pikachu.png'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
 	<link rel='stylesheet' href='styles.css'>
@@ -47,7 +49,8 @@
 					<h2>welcome to <i>myspace!</i></h2>
 					<p title='there is always a hidden meaning.'><small>this is my second paragraph with no hidden meaning.</small></p>
 					<br>
-					<p>i like to work with music and electronics. <small>sometimes combining the two.</small></p>
+					<p>i like to work with music and electronics.</p>
+					<p style="text-align: center; line-height: 0.1;"><small>sometimes combining the two.</small></p>
 					<br>
 					<p>this is where i keep records of my <a href='projects.html'>projects</a>.</p>
 					<br>
@@ -58,6 +61,12 @@
 
 			</div>
 		</div>
+	</div>
+	<footer>
+		<br>
+		created by garrett.
+		<br>
+	</footer>
 
 </body>
 </html>
