--- a/journal.html
+++ b/journal.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>journal</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel='icon' type='image/x-icon' href='assets/Pikachu.png'>
 	<link href='https://fonts.googleapis.com/css?family=DotGothic16' rel='stylesheet'>
 	<link rel='stylesheet' href='styles.css'>
@@ -51,6 +53,12 @@
 			</div>
 		</div>
 	</div>
+	<br>
+	<footer>
+		<br>
+		created by garrett.
+		<br>
+	</footer>
 
 </body>
 </html>
