--- a/projects.html
+++ b/projects.html
@@ -48,41 +48,80 @@
 					<p style='line-height: 0.25;'><small><i>do not mind the scattered energy drinks.</i></small></p>
 				</div>
 				<div class='rightside'>
-					<h2>cerial ver. 2 (2023)</h2>
+					<h2>cerial ver. 2 (dec 2023)</h2>
 					<p>fight stick instrument.</p>
 					<br>
 					<p style='font-size: 80%;'>i don't play any fighting games but i like the look and feel of fight sticks.
 						<br>so now it's a way to make music.
 						<br>it also now functions simultaneously as a fight stick <i>and</i> as a musical instrument.</p>
 					<br>
-					<p>MEAP board<br>plastic juntion box<br>generic arcade buttons and stick (sanwa clones)</p>
+					<p style="line-height: 0.25;">tools:</p>
+					<p style='font-size: 90%;'><a href='https://github.com/masonandrewmann/M.E.A.P.'>MEAP board</a><br><a href='https://a.co/d/4CRT2Pq'>plastic juntion box</a><br><a href='https://a.co/d/7k1CtzN'>generic arcade buttons and stick (sanwa clones)</a></p>
 				</div>
 			</div>
 			<!-- entry 2 -->
 			<br>
-			<div class='flex-container'>
+			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
 					<img src='assets/cerial ver1.png' width='300' height='400'>
 					<p style='line-height: 0.25;'>cerial ver. 1</p>
 					<p style='line-height: 0.25;'><small><i>the tupperware was cleaned before use.</i></small></p>
 				</div>
 				<div class='rightside'>
-					<h2>cerial ver. 1 (2023)</h2>
+					<h2>cerial ver. 1 (nov 2023)</h2>
 					<p>tupperware peripheral.</p>
 					<br>
 					<p style='font-size: 80%;'>in designing a peripheral for the meap board,
 						<br>what better interface than big buttons?
 						<br>each button has an fsr attached to it for "truly" "analogue" control.</p>
 					<br>
-					<p>MEAP board<br>takeaway tupperware container<br>generic arcade buttons (different sanwa clones)<br>adafruit force sensitive resistors</p>
+					<p style="line-height: 0.25;">tools:</p>
+					<p style='font-size: 90%;'><a href='https://github.com/masonandrewmann/M.E.A.P.'>MEAP board</a><br>takeaway tupperware container<br><a href='https://a.co/d/1bCcZAN'>generic arcade buttons (sanwa clones)</a><br><a href='https://www.adafruit.com/product/166'>adafruit force sensitive resistors</a></p>
+				</div>
+			</div>
+			<!-- entry 3 -->
+			<br>
+			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+				<div class='leftside'>
+					<br>
+					<img src='assets/python-logo.png' width='175' height='200'>
+				</div>
+				<div class='rightside'>
+					<h2>rmg (dec 2023)</h2>
+					<p>random music generator (manipulator).</p>
+					<br>
+					<p style="font-size: 80%;">unlike the version from october, this is less of a random music "generator"
+						<br>and more of a random music manipulator.
+						<br>even still, i consider it part of my rmg series.
+						<br>can be found on github <a href='https://github.com/hytheaway/dec23-rmg'>here</a>.</p>
+					<br>
+					<p style="line-height: 0.25;">tools:</p>
+					<p style='font-size: 90%;'>python<br>libraries: numpy, matplotlib, soundfile, pydub, IPython, tkinter</p>
+				</div>
+			</div>
+			<!-- entry 4 -->
+			<br>
+			<div class='flex-container'>
+				<div class='leftside'>
+					<br>
+					<img src="assets/python-logo.png" width='175' height='200'>
+				</div>
+				<div class="rightside">
+					<h2>rmg (oct 2023)</h2>
+					<p>random music generator.</p>
+					<br>
+					<p style='font-size: 80%;'>every year or so i write a new random music generator in python.
+						<br>this was this year's.
+						<br>can be found on github <a href='https://github.com/hytheaway/oct23-rmg'>here</a>.</p>
+					<br>
+					<p style="line-height: 0.25;">tools:</p>
+					<p style='font-size: 90%;'>python<br>libraries: numpy, scipy, pydub</p>
 				</div>
 			</div>
 		</div>
 	</div>
 	<footer>
-		<br>
 		created by garrett.
-		<br>
 	</footer>
 
 
