assets added + write ups

--- a/projects.html
+++ b/projects.html
@@ -48,12 +48,13 @@
 					<p style='line-height: 0.25;'><small><i>do not mind the scattered energy drinks.</i></small></p>
 				</div>
 				<div class='rightside'>
-					<h2>cerial ver. 2 (dec 2023)</h2>
+					<h2><a href='cerialv2.html'>cerial ver. 2 (dec 2023)</a></h2>
 					<p>fight stick instrument.</p>
 					<br>
 					<p style='font-size: 80%;'>i don't play any fighting games but i like the look and feel of fight sticks.
 						<br>so now it's a way to make music.
 						<br>it also now functions simultaneously as a fight stick <i>and</i> as a musical instrument.</p>
+						<br>can be found on github <a href='https://github.com/hytheaway/cerialver2'>here</a>.</p>
 					<br>
 					<p style="line-height: 0.25;">tools:</p>
 					<p style='font-size: 90%;'><a href='https://github.com/masonandrewmann/M.E.A.P.'>MEAP board</a><br><a href='https://a.co/d/4CRT2Pq'>plastic juntion box</a><br><a href='https://a.co/d/7k1CtzN'>generic arcade buttons and stick (sanwa clones)</a></p>
