updated cerialv2 page.

--- a/cerialv2.html
+++ b/cerialv2.html
@@ -41,7 +41,7 @@
 			</div>
 			<hr>			
 			<h2 style="text-align: center;">cerial ver. 2 (dec 2023)</h2>
-			<p style='text-align: center;'><i>a lot of this is being written retroactively,<br>so here's the state of things as of dec 20, 2023.</i></p>
+			<p style='text-align: center;'><i>a lot of this was written retroactively,<br>so here's the state of things as of apr 17, 2024.</i></p>
 			<br>
 			<!-- entry 1 -->
 			<div class="flex-container">
@@ -103,6 +103,101 @@
 				</div>
 				<div class="rightsidecenter">
 					<img src="assets/cerial2_insane-ramblings.png" width="400" height="300">
+				</div>
+			</div>
+			<br>
+			<br>
+			<!-- entry 3 -->
+			<div class="flex-container">
+				<div class="leftside">
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<img src="assets/cerial2_testing-cables.png" width='400' height='300'>
+				</div>
+				<div class="rightside">
+					<p style="font-size: 80%;"><i>dec 18, 2023.</i>
+						<br>how long has it been?
+						<br>
+						<br>.days?
+						<br>..months?
+						<br>...years?
+						<br>
+						<br>how long since i last felt the kiss of sunlight upon my skin?
+						<br>how long since i held the brim of a hat down as the wind rushed past?
+						<br>how long since i felt the dew-adorned earth beneath my feet?
+						<br>
+						<br>i know not, for i am condemned to curiosity.
+						<br>
+						<br>the sun's light shall not be snuffed in a day. the wind will not cease on a whim.
+						<br>the dew may not remove itself from the earth as a matter of principle.
+						<br>neither, then, shall my motivation be extinguished.
+						<br>
+						<br>in the face of the known & unknown, i persevere. 
+						<br>
+						<br>---
+						<br>
+						<br>this stage felt like an eternity. my hands have never been all too steady,
+						<br>and between repeated soldering, testing, and resoldering, i must've inhaled
+						<br>a concerning amount of fumes.
+						<br>well, maybe someone else's concern.
+						<br>
+						<br>i also added a few pass-thru ports: a usb c pass-thru for programming the
+						<br>meap board, a couple buttons for reset and program, and a hole cut for the
+						<br>fight stick microcontroller's usb type b port to pass thru.
+						<br>
+						<br>this stage also is where i learned some of the quirks of these boards. 
+						<br>by far the largest "quirk" that utterly baffled me for nearly half an hour
+						<br>was related to the new usb c port i had outfitted.
+						<br>the meap board has a micro usb b port that's used to communicate with
+						<br>the ESP32. when it came time to extend the port to the edge of the chassis,
+						<br>i elected to use a usb c port on the chassis, and internally use a micro usb
+						<br>to usb c adapter to connect the meap board to this pass thru. i figured since the
+						<br>usb standard is, y'know, <i>standard</i>, this wouldn't be a problem.
+						<br>
+						<br>i've heard of this before, which is why i didn't spend even more time on things
+						<br>but this meap board, in the configuration i have it, with the particular adapters
+						<br>and pass-thru port i have, will not pass data unless the connected usb c cable
+						<br>is usb a to usb c, obviously with the a side at the computer. usb c to c doesn't work.
+						<br>it'll pass power, but not data. whatever.
+					</p>
+				</div>
+			</div>
+			<br>
+			<br>
+			<!-- entry 4 -->
+			<div class="flex-container">
+				<div class="leftside">
+					<p style="font-size: 80%; text-align: right;"><i>dec 19, 2023.</i>
+						<br>the day it all comes together. and also the day i actually write code for once.
+						<br>
+						<br>i basically went into a fugue state for 9 hours and wrote the appropriate code, which
+						<br> may be found <a href='https://github.com/hytheaway/cerialver2'>here</a>.
+						<br>
+						<br>i will be the first to admit that i am not an expert in c or c++, and i am much
+						<br>less an expert in programming microcontrollers, especially with dynamic instructions.
+						<br>however, it functions, and as long as i don't touch it, it will continue to function.
+					</p>
+				</div>
+				<div class="rightsidecenter">
+					<img src="assets/cerial2_first-time-operational.png" width='400' height='300'>
 				</div>
 			</div>
 		</div>
