--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
 					<br>
 					<p style='font-size: 80%;'>i don't play any fighting games but i like the look and feel of fight sticks.
 						<br>so now it's a way to make music.
-						<br>it also now functions simultaneously as a fight stick <i>and</i> as a musical instrument.</p>
+						<br>it also now functions simultaneously as a fight stick <i>and</i> as a musical instrument.
 						<br>can be found on github <a href='https://github.com/hytheaway/cerialver2'>here</a>.</p>
 					<br>
 					<p style="line-height: 0.25;">tools:</p>
