--- a/consolemods.html
+++ b/consolemods.html
@@ -41,7 +41,24 @@
 			</div>
 			<hr>
 			<br>
-			<p style='text-align: center;'>to be updated :p</p>
+			<h2 style="text-align: center;">gameboy color mod no. 1 (dec 2023)</h2>
+			<br>
+			<!-- entry 1 -->
+			<div class="flex-container">
+				<div class="leftside">
+					<img src="assets/both_gameboys.png" width="400" height="300">
+					<br>can you spot the difference between these two?
+					<p style="font-size: 70%;">
+						i mean like obviously yes you can they look incredibly different but that's besides the point.
+					</p>
+					more like, what would you expect to be different between these two?
+					<br>i'll tell ya, not much.
+					<br>
+					<br>
+					<img src="assets/modded_gameboy.png" width="300" height="400">
+					<br>but it's cool enough.
+				</div>
+			</div>
 		</div>
 	</div>
 	<br>
