assets + height layer
compressed photos + added page w audio player for height layer comparison

--- a/cerialv2.html
+++ b/cerialv2.html
@@ -48,7 +48,7 @@
 				<div class="leftside">
 					<br>
 					<br>
-					<img src="assets/cerial ver2.png" width='300' height='400'>
+					<img src="assets/cerial ver2.jpg" width='300' height='400'>
 				</div>
 				<div class="rightside">
 					<p style="font-size: 80%;"><i>dec 12, 2023.</i>
@@ -102,7 +102,7 @@
 					</p>
 				</div>
 				<div class="rightsidecenter">
-					<img src="assets/cerial2_insane-ramblings.png" width="400" height="300">
+					<img src="assets/cerial2_insane-ramblings.jpg" width="400" height="300">
 				</div>
 			</div>
 			<br>
@@ -130,7 +130,7 @@
 					<br>
 					<br>
 					<br>
-					<img src="assets/cerial2_testing-cables.png" width='400' height='300'>
+					<img src="assets/cerial2_testing-cables.jpg" width='400' height='300'>
 				</div>
 				<div class="rightside">
 					<p style="font-size: 80%;"><i>dec 18, 2023.</i>
@@ -199,7 +199,7 @@
 					</p>
 				</div>
 				<div class="rightsidecenter">
-					<img src="assets/cerial2_first-time-operational.png" width='400' height='300'>
+					<img src="assets/cerial2_first-time-operational.jpg" width='400' height='300'>
 				</div>
 			</div>
 		</div>
