--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div class='flex-container'>
 
 				<div class='leftside'>
-					<img src='assets/me1.png' width='300' height='400' style='border: 10px solid darkgrey; outline-style: dashed; outline-color: lightgrey; outline-width: 4px; outline-offset: -5px;'>
+					<img src='assets/me1.jpg' width='300' height='400' style='border: 10px solid darkgrey; outline-style: dashed; outline-color: lightgrey; outline-width: 4px; outline-offset: -5px;'>
 					<p style='line-height: 0.25;'>this is a photo of me.</p>
 				</div>
 
