--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
 			<!-- entry 1 -->
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/cerial ver2.png' width='300' height='400'>
+					<img src='assets/cerial ver2.jpg' width='300' height='400'>
 					<p style='line-height: 0.25;'>cerial ver. 2</p>
 					<p style='line-height: 0.25;'><small><i>do not mind the scattered energy drinks.</i></small></p>
 				</div>
@@ -64,7 +64,7 @@
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/cerial ver1.png' width='300' height='400'>
+					<img src='assets/cerial ver1.jpg' width='300' height='400'>
 					<p style='line-height: 0.25;'>cerial ver. 1</p>
 					<p style='line-height: 0.25;'><small><i>the tupperware was cleaned before use.</i></small></p>
 				</div>
