--- a/height-layer.html
+++ b/height-layer.html
@@ -82,6 +82,7 @@
             <br>the height array for mix b is 2 meters above the main array.
             <br>
             <br>the recording was rendered with 3 different binauralization renderers/methods: atmos, virtuoso, & dearvr.
+            <br>for most people, atmos will be the best option.
           </p>
       </div>
     </div>
