--- a/projects.html
+++ b/projects.html
@@ -39,8 +39,31 @@
 				</ul>
 			</div>
 			<hr>
-			<br>
 			<!-- entry 1 -->
+			<br>
+			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
+				<div class='leftside'>
+					<img src='assets/height_layer_comparison.jpg' width='300' height='400'>
+					<p style='line-height: 0.25;'>height layer comparison</p>
+					<p style='line-height: 0.25;'><small><i>what kind of monster takes the screws out of a d sub?</i></small></p>
+				</div>
+				<div class='rightside'>
+					<h2><a href='height-layer.html'>height layer comparison (apr 2024)</a></h2>
+					<p>how much does mic placement <i>really</i> matter?</p>
+					<br>
+					<p style='font-size: 80%;'>recording vierne's <i>arabesque</i> in a cathedral.	
+						<br>13 microphones.
+						<br>pcma-3d.
+						<br>broken d sub connectors.
+						<br>it doesn't get better than this.</p>
+					<br>
+					<p style="line-height: 0.25;">tools:</p>
+					<p style='font-size: 90%;'>microphones: 5 schoeps mk6, 4 sennheiser mkh800, 4 dpa 4011a.
+					<br>other: 2 apogee symphony io</p>
+				</div>
+			</div>
+			<!-- entry 2 -->
+			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
 					<img src='assets/cerial ver2.jpg' width='300' height='400'>
