--- a/audiothings.html
+++ b/audiothings.html
@@ -41,7 +41,9 @@
 			</div>
 			<hr>
 			<br>
-			<p style='text-align: center;'>to be updated :p</p>
+			<p style='text-align: center;'>
+				<a href="height-layer.html">height layer comparison (apr 2024)</a>
+			</p>
 		</div>
 	</div>
 	<br>
