images now dynamically resize

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/height_layer_comparison.jpg' width='300' height='400'>
+					<img src='assets/height_layer_comparison.jpg' style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>height layer comparison</p>
 					<p style='line-height: 0.25;'><small><i>what kind of monster takes the screws out of a d sub?</i></small></p>
 				</div>
@@ -66,7 +66,7 @@
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/cerial ver2.jpg' width='300' height='400'>
+					<img src='assets/cerial ver2.jpg' style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>cerial ver. 2</p>
 					<p style='line-height: 0.25;'><small><i>do not mind the scattered energy drinks.</i></small></p>
 				</div>
@@ -87,7 +87,7 @@
 			<br>
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
-					<img src='assets/cerial ver1.jpg' width='300' height='400'>
+					<img src='assets/cerial ver1.jpg' style="max-width: 35%; max-height: 100vh; margin: auto;">
 					<p style='line-height: 0.25;'>cerial ver. 1</p>
 					<p style='line-height: 0.25;'><small><i>the tupperware was cleaned before use.</i></small></p>
 				</div>
@@ -108,7 +108,7 @@
 			<div class='flex-container' style='border-bottom: 2px dashed lightgrey;'>
 				<div class='leftside'>
 					<br>
-					<img src='assets/python-logo.png' width='175' height='200'>
+					<img src='assets/python-logo.png' style="max-width: 25%; max-height: 100vh; margin: auto;">
 				</div>
 				<div class='rightside'>
 					<h2>rmg (dec 2023)</h2>
@@ -128,7 +128,7 @@
 			<div class='flex-container'>
 				<div class='leftside'>
 					<br>
-					<img src="assets/python-logo.png" width='175' height='200'>
+					<img src="assets/python-logo.png" style="max-width: 25%; max-height: 100vh; margin: auto;">
 				</div>
 				<div class="rightside">
 					<h2>rmg (oct 2023)</h2>
