dynamic resize images consolemods.html

--- a/consolemods.html
+++ b/consolemods.html
@@ -46,7 +46,7 @@
 			<!-- entry 1 -->
 			<div class="flex-container">
 				<div class="leftside">
-					<img src="assets/both_gameboys.jpg" width="400" height="300">
+					<img src="assets/both_gameboys.jpg" style="max-width: 25%; max-height: 100vh; margin: auto;">
 					<br>can you spot the difference between these two?
 					<p style="font-size: 70%;">
 						i mean like obviously yes you can they look incredibly different but that's besides the point.
@@ -55,7 +55,7 @@
 					<br>i'll tell ya, not much.
 					<br>
 					<br>
-					<img src="assets/modded_gameboy.jpg" width="300" height="400">
+					<img src="assets/modded_gameboy.jpg" style="max-width: 20%; max-height: 100vh; margin: auto;">
 					<br>but it's cool enough.
 				</div>
 			</div>
